--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -177,3 +177,11 @@
     display: inline-flex;
     width: 100%;
 }
+
+.tweet-profil {
+  font-size: 12px;
+}
+
+.tweet-info {
+  font-size: 18px;
+}
