--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -15,9 +15,10 @@
     <!-- <p class="margin-top">Reads:</p> -->
     <% if @related_artists != nil %>
       <p class="margin-top">Related artists:</p>
-      <ul class="list-unstyled">
+      <ul class="list-unstyled margin-left">
       <% @related_artists[0..3].each do |related_artist| %>
-        <li><%= link_to related_artist.name, artist_path(related_artist.id) %></li>
+       <p >
+        <li><%= link_to related_artist.name, artist_path(related_artist.id) %></li> </p>
       <% end%>
     <% end %>
     </ul>
