back to infinit scroll v2

--- a/app/views/dialogs/index.html.erb
+++ b/app/views/dialogs/index.html.erb
@@ -1,6 +1,7 @@
 <div id="dialogs">
   <div class="scroll-top">Back to top</div>
-<%= render partial: "dialog" %>
+  <%  %>
+    <%= render "dialog" %>
 </div>
 
-<%# will_paginate @dialogs %>
+<%= will_paginate @dialogs %>
