--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -28,6 +28,9 @@
                      <%= d.artwork.name %>,
                      <%= d.artwork.date %>
                    </p>
+                   <p>
+                     <div>published by NonPrintingCharacter</div>
+                   </p>
                  </div>
                </div>
                <% unless get_related_url(d.id).empty? %>
