--- a/app/views/dialogs/_dialog.html.erb
+++ b/app/views/dialogs/_dialog.html.erb
@@ -29,7 +29,7 @@
                      <%= d.artwork.date %>
                    </p>
                    <p>
-                     <div>published by NonPrintingCharacter</div>
+                     <div class="tweet-profil">published by NonPrintingCharacter</div>
                    </p>
                  </div>
                </div>
