--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -62,8 +62,9 @@
         <p>Sign in to Negentropy or create an account</p>
       </div>
       <div class="modal-body">
-        <%= link_to "Connect with Facebook /", user_omniauth_authorize_path(:facebook) %>
-        <%= link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter) %>
+        <%# link_to "Connect with Facebook /", user_omniauth_authorize_path(:facebook) %>
+        <%# link_to "Connect with Twitter", user_omniauth_authorize_path(:twitter) %>
+        <%= link_to "Connect with Instagram", user_omniauth_authorize_path(:instagram) %>
       </div>
     </div>
   </div>
